--- a/endorsements.html
+++ b/endorsements.html
@@ -148,16 +148,17 @@
 <li>Sonia Medina Planning Commissioner</li>
 </ol>
 
+<br>
+<br>
 
-Organizations  
+<h2> Organizations  </h2>
 
-MPOA - Milpitas Police Association
-
-Milpitas Fire Dept Local 1699
-
-MEA - Milpitas Employee Association
-
-NALC - National Association of Letter Carriers
+<ol>
+<li>MPOA - Milpitas Police Association</li>
+<li>Milpitas Fire Dept Local 1699</li>
+<li>MEA - Milpitas Employee Association</li>
+<li>NALC - National Association of Letter Carriers</li>
+</ol>
 
 </p>
   
