--- a/endorsements.html
+++ b/endorsements.html
@@ -127,6 +127,7 @@
 <li>Community and Business Members </li>
 <li>Rey Rodriguez former Newark School Board Trustee</li>
 <li>Chuck Gary former MHS Principal</li>
+<li>Kevin Le Science, Technology, and Innovation Commissioner</li>
 <li>Dipak Awasthi Milpitas Economic Dev. Commissioner</li>
 <li>Yu-Lan Chou Library Commissioner Chair</li>
 <li>Ha Phan Library Commissioner</li>
@@ -148,9 +149,6 @@
 <li>Sonia Medina Planning Commissioner</li>
 </ol>
 
-<br>
-<br>
-
 <h2> Organizations  </h2>
 
 <ol>
@@ -167,7 +165,7 @@
 					</div>
 					<div class="col-xl-7 col-lg-7">
 						<div class="about2-me-img">
-							<img src="img/vice-mayor.jpeg" alt="">
+							<img src="img/police.jpeg" alt="">
 						</div>
 					</div>
 				</div>
