--- a/endorsements.html
+++ b/endorsements.html
@@ -120,8 +120,8 @@
 <li>Thelma Boac Berryessa School District Trustee</li>
 <li>George Sanchez Franklin Mckinley Board Trustee</li>
 <li>Anne Sousa Campbell Councilmember</li>
-<li>Lisa Matichak Mountainview Councilmember</li>
-<li>Margaret Abe Koga Mountainview Councilmember</li>
+<li>Lisa Matichak Mountain View Councilmember</li>
+<li>Margaret Abe Koga Mountain View Councilmember</li>
 <li>Pat Gacoscos Union City Councilmember</li>
 <li>Joe DiSalvo County Office of Education Trustee</li>
 <li>Community and Business Members </li>
@@ -161,6 +161,16 @@
 </p>
   
 							</div>
+						</div>
+					</div>
+					<div class="col-xl-7 col-lg-7">
+						<div class="about2-me-img">
+							<img src="img/police.jpg" alt="">
+						</div>
+					</div>
+					<div class="col-xl-7 col-lg-7">
+						<div class="about2-me-img">
+							<img src="img/police.jpeg" alt="">
 						</div>
 					</div>
 					<div class="col-xl-7 col-lg-7">
