--- a/about-me.html
+++ b/about-me.html
@@ -48,6 +48,7 @@
 										</li>
 										<li><a href="about-me.html">ABOUT ME</a></li>
 										<li><a href="endorsements.html">ENDORSEMENTS</a></li>
+										<li><a href="gallery.html">GALLERY</a></li>
 										<li><a href="contact-01.html">CONTACT US</a></li>
 
 									</ul>
