--- a/endorsements.html
+++ b/endorsements.html
@@ -528,7 +528,8 @@
 		<!-- brand-area-end -->
 
 		<!-- footer-area-start -->
-		<!-- <footer>
+		<footer>
+			<!--
 			<div class="footer-area footer-white pt-95 pb-70" style="background-image:url(img/bg/6.jpg)">
 				<div class="container">
 					<div class="row">
@@ -601,7 +602,7 @@
 						</div>
 					</div>
 				</div>
-			</div> -->
+			</div>
 			<div class="footer-bottom-area footer-bottom-white blue3-bg pt-25 pb-25">
 				<div class="container">
 					<div class="row">
