--- a/gallery.html
+++ b/gallery.html
@@ -64,51 +64,18 @@
 					<div class="row">
 						<div class="col-xl-2 col-lg-2">
 							<div class="logo logo2">
-								<a href="index.html"><img src="img/logo/logo2.png" alt="" /></a>
+								<a href="index.html"><img src="img/logo/test.png" alt="" /></a>
 							</div>
 						</div>
 						<div class="col-xl-7 col-lg-7">
 							<div class="main-menu text-right">
 								<nav id="mobile-menu">
 									<ul>
-										<li class="active"><a href="index.html">HOME </a>                                           
-											<ul class="sub-menu text-left">
-												<li><a href="index.html">home 1</a></li>
-												<li><a href="index-2.html">home 2</a></li>
-												<li><a href="index-3.html">home 3</a></li>
-											</ul>
+																				<li class="active"><a href="index.html">HOME </a>                                           
 										</li>
-										<li><a href="about-us.html">ABOUT US</a></li>
-										<li><a href="events-grid.html">EVENTS</a>
-											<ul class="sub-menu text-left">
-												<li><a href="events-grid.html">events grid</a></li>
-												<li><a href="events-list.html">events list</a></li>
-												<li><a href="events-details.html">events details</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Pages</a>
-											<ul class="sub-menu text-left">
-												<li><a href="issue-01.html">issue 01</a></li>
-												<li><a href="issue-02.html">issue 02</a></li>
-												<li><a href="issue-details.html">issue details</a></li>
-												<li><a href="donation-form.html">donation form</a></li>
-												<li><a href="donation-landing.html">donation landing</a></li>			
-												<li><a href="donation-details.html">donation details</a></li>			
-												<li><a href="our-volunteer.html">our volunteer</a></li>			
-												<li><a href="volunteer-become.html">volunteer become</a></li>			
-												<li><a href="biography.html">biography</a></li>			
-												<li><a href="faq.html">faq</a></li>			
-												<li><a href="error.html">error</a></li>			
-												<li><a href="contact-02.html">contact 02</a></li>			
-											</ul>
-										</li>
-										<li><a href="blog-grid.html">NEWS</a>
-											<ul class="sub-menu text-left">
-												<li><a href="blog-grid.html">blog grid</a></li>
-												<li><a href="blog-with-sidebar.html">blog with sidebar</a></li>
-												<li><a href="blog-details.html">blog details</a></li>
-											</ul>
-										</li>
+										<li><a href="about-me.html">ABOUT ME</a></li>
+										<li><a href="endorsements.html">ENDORSEMENTS</a></li>
+										<li><a href="gallery.html">GALLERY</a></li>
 										<li><a href="contact-01.html">CONTACT US</a></li>
 									</ul>
 								</nav>
@@ -278,7 +245,7 @@
 		
 		<!-- footer-area-start -->
 		<footer>
-			<div class="footer-area footer-white pt-95 pb-70" style="background-image:url(img/bg/6.jpg)">
+			<!-- <div class="footer-area footer-white pt-95 pb-70" style="background-image:url(img/bg/6.jpg)">
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-4 col-lg-4 col-md-6">
@@ -350,23 +317,23 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="footer-bottom-area footer-bottom-white blue3-bg pt-25 pb-25">
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-6 col-lg-6">
 							<div class="copyright">
-								<p><i class="far fa-copyright"></i> 2018 Your Company. All Rights Reserved. Designed By <a href="#">BDevs.</a></p>
+								<p><i class="far fa-copyright"></i> 2022 Carmen Montano For Milpitas. All Rights Reserved.</a></p>
 							</div>
 						</div>
-						<div class="col-xl-6 col-lg-6">
+<!-- 						<div class="col-xl-6 col-lg-6">
 							<ul class="footer-footer-link text-lg-right">
 								<li><a href="#">Privacy & Policy </a></li>
 								<li><a href="#"> Setting </a></li>
 								<li><a href="#"> Contact Us </a></li>
 								<li><a href="#">Blog & News</a></li>
 							</ul>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
