--- a/index.html
+++ b/index.html
@@ -635,8 +635,8 @@
 		<!-- subscribe-area-end -->
 
 		<!-- footer-area-start -->
-		<!--
-		<footer>
+		
+		<footer> <!--
 			<div class="footer-area pt-115 pb-90">
 				<div class="container">
 					<div class="row">
