--- a/contact-01.html
+++ b/contact-01.html
@@ -158,7 +158,7 @@
 		<!-- map-area-end -->
 		
 		<!-- footer-area-start -->
-<!-- 		<footer>
+<footer> <!--
 			<div class="footer-area footer-white pt-95 pb-70" style="background-image:url(img/bg/6.jpg)">
 				<div class="container">
 					<div class="row">
