--- a/endorsements.html
+++ b/endorsements.html
@@ -602,7 +602,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="footer-bottom-area footer-bottom-white blue3-bg pt-25 pb-25">
 				<div class="container">
 					<div class="row">
