--- a/endorsements.html
+++ b/endorsements.html
@@ -167,16 +167,8 @@
 					<div class="col-xl-7 col-lg-7">
 						<div class="about2-me-img">
 							<img src="img/police.jpg" alt="">
-						</div>
-					</div>
-					<div class="col-xl-7 col-lg-7">
-						<div class="about2-me-img">
-							<img src="img/police.jpeg" alt="">
-						</div>
-					</div>
-					<div class="col-xl-7 col-lg-7">
-						<div class="about2-me-img">
-							<img src="img/police.jpeg" alt="">
+							<img src="img/police.jpg" alt="">
+							<img src="img/police.jpg" alt="">
 						</div>
 					</div>
 				</div>
