--- a/endorsements.html
+++ b/endorsements.html
@@ -167,8 +167,10 @@
 					<div class="col-xl-7 col-lg-7">
 						<div class="about2-me-img">
 							<img src="img/police.jpg" alt="">
-							<img src="img/police.jpg" alt="">
-							<img src="img/police.jpg" alt="">
+							<img src="img/endorse1.jpg" alt="">
+							<img src="img/endorse2.jpg" alt="">
+							<img src="img/endorse3.jpg" alt="">
+							<img src="img/endorse4.jpg" alt="">
 						</div>
 					</div>
 				</div>
