--- a/about-me.html
+++ b/about-me.html
@@ -132,6 +132,9 @@
 					<div class="col-xl-7 col-lg-7">
 						<div class="about2-me-img">
 							<img src="img/vice-mayor.jpeg" alt="">
+							<img src="img/endorse3.jpeg" alt="">
+							<img src="img/endorse4.jpeg" alt="">
+							<img src="img/endorse5.jpeg" alt="">
 						</div>
 					</div>
 				</div>
@@ -483,7 +486,8 @@
 		<!-- brand-area-end -->
 
 		<!-- footer-area-start -->
-		<!-- <footer>
+		<footer>
+			<!--
 			<div class="footer-area footer-white pt-95 pb-70" style="background-image:url(img/bg/6.jpg)">
 				<div class="container">
 					<div class="row">
