--- a/contact-01.html
+++ b/contact-01.html
@@ -52,7 +52,7 @@
 										<li><a href="about-me.html">ABOUT ME</a></li>
 										<li><a href="endorsements.html">ENDORSEMENTS</a></li>
 										<li><a href="gallery.html">GALLERY</a></li>
-										<li><a href="contact-01.html">CONTACT US</a></li>
+										<li><a href="contact-01.html">CONTACT ME</a></li>
 									</ul>
 								</nav>
 							</div>
@@ -118,7 +118,7 @@
 					</div> -->
 					<div class="col-xl-7 col-lg-7">
 						<div class="contact2-wrapper mb-30">
-							<h1 class="contact-title">Contact Us</h1>
+							<h1 class="contact-title">Contact ME</h1>
 							<form action="assets/mail.php" id="contact-form">
 								<div class="row">
 									
