--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										<li><a href="about-me.html">ABOUT ME</a></li>
 										<li><a href="endorsements.html">ENDORSEMENTS</a></li>
 										<li><a href="gallery.html">GALLERY</a></li>
-										<li><a href="contact-01.html">CONTACT US</a></li>
+										<li><a href="contact-01.html">CONTACT ME</a></li>
 
 									</ul>
 								</nav>
