--- a/about-me.html
+++ b/about-me.html
@@ -49,7 +49,7 @@
 										<li><a href="about-me.html">ABOUT ME</a></li>
 										<li><a href="endorsements.html">ENDORSEMENTS</a></li>
 										<li><a href="gallery.html">GALLERY</a></li>
-										<li><a href="contact-01.html">CONTACT US</a></li>
+										<li><a href="contact-01.html">CONTACT ME</a></li>
 
 									</ul>
 								</nav>
@@ -132,6 +132,7 @@
 					<div class="col-xl-7 col-lg-7">
 						<div class="about2-me-img">
 							<img src="img/vice-mayor.jpeg" alt="">
+							<img src="img/portrait.jpeg" alt="">
 							<img src="img/endorse3.jpeg" alt="">
 							<img src="img/endorse4.jpeg" alt="">
 							<img src="img/endorse5.jpeg" alt="">
