--- a/about-me.html
+++ b/about-me.html
@@ -132,10 +132,10 @@
 					<div class="col-xl-7 col-lg-7">
 						<div class="about2-me-img">
 							<img src="img/vice-mayor.jpeg" alt="">
-							<img src="img/portrait.jpeg" alt="">
-							<img src="img/endorse3.jpeg" alt="">
-							<img src="img/endorse4.jpeg" alt="">
-							<img src="img/endorse5.jpeg" alt="">
+							<img src="img/portrait.jpg" alt="">
+							<img src="img/endorse3.jpg" alt="">
+							<img src="img/endorse8.jpg" alt="">
+							<img src="img/endorse6.jpg" alt="">
 						</div>
 					</div>
 				</div>
