--- a/gallery.html
+++ b/gallery.html
@@ -72,7 +72,7 @@
 		<!-- header-end -->
 		
 		<!-- breadcrumb-area-start -->
-		<div class="breadcrumb-area pt-250 pb-250" style="background-image:url(img/bg/8.jpg)">
+		<div class="breadcrumb-area pt-250 pb-250" style="background-image:url(img/bg/maingallery.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-12">
@@ -107,7 +107,7 @@
 					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
 						<div class="project-wrapper mb-30">
 							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/project//project1/1.jpg" alt=""></a>
+								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/gallery1.jpg" alt=""></a>
 								<div class="project-content">
 									<h2><a href="#">Charity for foods</a></h2>
 									<span>Food found</span>
