--- a/gallery.html
+++ b/gallery.html
@@ -76,12 +76,12 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-12">
-						<div class="breadcrumb-text text-center">
-							<h1>Issue Style 01</h1>
-							<ul class="breadcrumb-menu">
-								<li><a href="index.html">home</a></li>
-								<li><span>Issue Style 01</span></li>
-							</ul>
+						<!-- <div class="breadcrumb-text text-center"> -->
+							<!-- <h1>Issue Style 01</h1> -->
+							<!-- <ul class="breadcrumb-menu"> -->
+								<!-- <li><a href="index.html">home</a></li> -->
+								<!-- <li><span>Issue Style 01</span></li> -->
+							<!-- </ul> -->
 						</div>
 					</div>
 				</div>
