--- a/gallery.html
+++ b/gallery.html
@@ -96,10 +96,10 @@
 					<div class="col-xl-12">
 						<div class="portfolio-menu mb-55 text-center">
 							<button class="active" data-filter="*">All</button>
-							<button data-filter=".cat1">Conference</button>
+<!-- 							<button data-filter=".cat1">Conference</button>
 							<button data-filter=".cat2">Volunteer</button>
 							<button data-filter=".cat3">Politics</button>
-							<button data-filter=".cat4">Campaign</button>
+							<button data-filter=".cat4">Campaign</button> -->
 						</div>
 					</div>
 				</div>
