--- a/gallery.html
+++ b/gallery.html
@@ -108,109 +108,34 @@
 						<div class="project-wrapper mb-30">
 							<div class="project-img2">
 								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/gallery1.jpg" alt=""></a>
-								<div class="project-content">
-									<h2><a href="#">Charity for foods</a></h2>
-									<span>Food found</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat2">
-						<div class="project-wrapper mb-20">
-							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/2.jpg"><img src="img/project//project1/2.jpg" alt=""></a>
-								<div class="project-content">
-									<h2><a href="#">Charity for foods</a></h2>
-									<span>Food found</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat4 cat1">
-						<div class="project-wrapper mb-20">
-							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/3.jpg"><img src="img/project//project1/3.jpg" alt=""></a>
-								<div class="project-content">
-									<h2><a href="#">Charity for foods</a></h2>
-									<span>Food found</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4">
-						<div class="project-wrapper mb-30">
-							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/4.jpg"><img src="img/project//project1/4.jpg" alt=""></a>
-								<div class="project-content">
-									<h2><a href="#">Charity for foods</a></h2>
-									<span>Food found</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat2">
-						<div class="project-wrapper mb-30">
-							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/5.jpg"><img src="img/project//project1/5.jpg" alt=""></a>
-								<div class="project-content">
-									<h2><a href="#">Charity for foods</a></h2>
-									<span>Food found</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat4">
-						<div class="project-wrapper mb-20">
-							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/6.jpg"><img src="img/project//project1/6.jpg" alt=""></a>
-								<div class="project-content">
-									<h2><a href="#">Charity for foods</a></h2>
-									<span>Food found</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat3">
-						<div class="project-wrapper mb-30">
-							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/8.jpg"><img src="img/project//project1/8.jpg" alt=""></a>
-								<div class="project-content">
-									<h2><a href="#">Charity for foods</a></h2>
-									<span>Food found</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat3 cat1">
-						<div class="project-wrapper mb-20">
-							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/7.jpg"><img src="img/project//project1/7.jpg" alt=""></a>
-								<div class="project-content">
-									<h2><a href="#">Charity for foods</a></h2>
-									<span>Food found</span>
-								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
 						<div class="project-wrapper mb-30">
 							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/9.jpg"><img src="img/project//project1/9.jpg" alt=""></a>
-								<div class="project-content">
-									<h2><a href="#">Charity for foods</a></h2>
-									<span>Food found</span>
-								</div>
+								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/gallery2.jpg" alt=""></a>
 							</div>
 						</div>
 					</div>
-					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat2 cat4">
+										<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
 						<div class="project-wrapper mb-30">
 							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/10.jpg"><img src="img/project//project1/10.jpg" alt=""></a>
-								<div class="project-content">
-									<h2><a href="#">Charity for foods</a></h2>
-									<span>Food found</span>
-								</div>
+								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/gallery3.jpg" alt=""></a>
+							</div>
+						</div>
+					</div>
+										<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+						<div class="project-wrapper mb-30">
+							<div class="project-img2">
+								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/gallery4.jpg" alt=""></a>
+							</div>
+						</div>
+					</div>
+										<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+						<div class="project-wrapper mb-30">
+							<div class="project-img2">
+								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/gallery5.jpg" alt=""></a>
 							</div>
 						</div>
 					</div>
