--- a/gallery.html
+++ b/gallery.html
@@ -114,6 +114,20 @@
 					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
 						<div class="project-wrapper mb-30">
 							<div class="project-img2">
+								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/endorse7.jpg" alt=""></a>
+							</div>
+						</div>
+					</div>
+										<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+						<div class="project-wrapper mb-30">
+							<div class="project-img2">
+								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/endorse9.jpg" alt=""></a>
+							</div>
+						</div>
+					</div>
+										<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+						<div class="project-wrapper mb-30">
+							<div class="project-img2">
 								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/gallery2.jpg" alt=""></a>
 							</div>
 						</div>
@@ -122,20 +136,6 @@
 						<div class="project-wrapper mb-30">
 							<div class="project-img2">
 								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/gallery3.jpg" alt=""></a>
-							</div>
-						</div>
-					</div>
-										<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
-						<div class="project-wrapper mb-30">
-							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/gallery4.jpg" alt=""></a>
-							</div>
-						</div>
-					</div>
-										<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
-						<div class="project-wrapper mb-30">
-							<div class="project-img2">
-								<a class="popup-image" href="img/project/project1/1.jpg"><img src="img/gallery5.jpg" alt=""></a>
 							</div>
 						</div>
 					</div>
