--- a/gallery.html
+++ b/gallery.html
@@ -139,6 +139,48 @@
 							</div>
 						</div>
 					</div>
+															<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+						<div class="project-wrapper mb-30">
+							<div class="project-img2">
+								<a><img src="img/gallery4.jpg" alt=""></a>
+							</div>
+						</div>
+					</div>
+															<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+						<div class="project-wrapper mb-30">
+							<div class="project-img2">
+								<a><img src="img/gallery5.jpg" alt=""></a>
+							</div>
+						</div>
+					</div>
+															<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+						<div class="project-wrapper mb-30">
+							<div class="project-img2">
+								<a><img src="img/gallery6.jpg" alt=""></a>
+							</div>
+						</div>
+					</div>
+															<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+						<div class="project-wrapper mb-30">
+							<div class="project-img2">
+								<a><img src="img/gallery7.jpg" alt=""></a>
+							</div>
+						</div>
+					</div>
+															<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+						<div class="project-wrapper mb-30">
+							<div class="project-img2">
+								<a><img src="img/gallery8.jpg" alt=""></a>
+							</div>
+						</div>
+					</div>
+															<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
+						<div class="project-wrapper mb-30">
+							<div class="project-img2">
+								<a><img src="img/gallery9.jpg" alt=""></a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
