--- a/gallery.html
+++ b/gallery.html
@@ -107,7 +107,7 @@
 					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
 						<div class="project-wrapper mb-30">
 							<div class="project-img2">
-								<a><img src="img/gallery1.jpg" alt=""></a>
+								<img src="img/gallery1.jpg" alt="">
 							</div>
 						</div>
 					</div>
