--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
 					<div class="row">
 						<div class="col-xl-2 col-lg-2">
 							<div class="logo logo2">
-								<a href="index.html"><img src="img/logo/test.png" alt="" /></a>
+								<a href="index.html"><img src="img/logo/carmenlogo.webp" alt="" /></a>
 							</div>
 						</div>
 						<div class="col-xl-7 col-lg-7">
