--- a/gallery.html
+++ b/gallery.html
@@ -105,10 +105,10 @@
 				</div>
 				<div class="row grid">
 					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
-						<div class="project-wrapper mb-30">
+						<!-- <div class="project-wrapper mb-30"> -->
 							<div class="project-img2">
-								<img src="img/gallery1.jpg" alt="">
-							</div>
+								<a><img src="img/gallery1.jpg" alt=""></a>
+							<!-- </div> -->
 						</div>
 					</div>
 					<div class="col-xl-4 col-lg-4 col-md-6 grid-item cat1 cat4">
