--- a/gallery.html
+++ b/gallery.html
@@ -95,7 +95,7 @@
 				<div class="row">
 					<div class="col-xl-12">
 						<div class="portfolio-menu mb-55 text-center">
-							<button class="active" data-filter="*">All</button>
+							<!-- <button class="active" data-filter="*">All</button> -->
 <!-- 							<button data-filter=".cat1">Conference</button>
 							<button data-filter=".cat2">Volunteer</button>
 							<button data-filter=".cat3">Politics</button>
