--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 								<div class="slider-content">
 									<h1 data-animation="fadeInUp" data-delay=".4s">Milpitas  <br> Families First</h1>
 <!-- 									<p data-animation="fadeInUp" data-delay=".6s">Join me to improve on the quality of life for our residents and families of our great City of Milpitas!</p> -->
-									<!-- <a data-animation="fadeInUp" data-delay=".8s" class="btn" href="#">join with us</a> -->
+									<a data-animation="fadeInUp" data-delay=".8s" class="btn" href="about-me.html">About Me</a>
 								</div>
 						   </div>
 					   </div>
@@ -190,7 +190,7 @@
 				<div class="row">
 					<div class="col-xl-12">
 						<div class="section-title text-center mb-60">
-							<h1>As a Milpitas Native, I have dedicated my <br> whole life to serving our fellow neighbors</h1>
+							<h1>As a Milpitas Native, I have dedicated my <br> entire life to serving our fellow neighbors</h1>
 						</div>
 					</div>
 				</div>
