--- a/endorsements.html
+++ b/endorsements.html
@@ -128,7 +128,7 @@
 <li>Community and Business Members </li>
 <li>Rey Rodriguez former Newark School Board Trustee</li>
 <li>Chuck Gary former MHS Principal</li>
-<li>Kevin Le Science, Technology, and Innovation Commissioner</li>
+<li>Kevin Le Technology, and Innovation Commissioner</li>
 <li>Dipak Awasthi Milpitas Economic Dev. Commissioner</li>
 <li>Yu-Lan Chou Library Commissioner Chair</li>
 <li>Ha Phan Library Commissioner</li>
