--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 						<div class="section-title text-center mb-60">
 							<h1>As a Milpitas Native, I have dedicated my <br> entire life to serving our fellow neighbors</h1>
 							<br>
-							<p>As your Vice Mayor, I have put forth initiatives to make our city the best place to live and raise a family. I advocate preserving our heritage by revitalizing Old Town Main Street and prioritizing public safety to ensure our community and residents are safe from crime.
+							<p>As your current Vice Mayor, I have put forth initiatives to make our city the best place to live and raise a family. I advocate preserving our heritage by revitalizing Old Town Main Street and prioritizing public safety to ensure our community and residents are safe from crime.
 <br>
 <br>
  I have lived in Milpitas nearly all my life since 1964. My children and grandchildren are now three generations strong in this city. My heart is with this "City by the Bay." As Vice Mayor, I always keep our hard-working families at the forefront of the decision-making process.</p>
